<resources>
    <string name="app_name">Find Alike</string>
    <string name="main_title">Find Similar Movies And TV-Shows:</string>
    <string name="search_bar_hint">Enter title here ....</string>
    <string name="hide_already_seen_titles_checkbox_text">Hide already seen titles</string>
    <string name="cant_find_title_button_text">Can\'t find a title ? Are you missing a title?\nLet us know !</string>
    <string name="these_are_similar_to_title">These Are Similar To "%s":</string>
    <string name="mark_as_seen">Mark as seen</string>
    <string name="title_poster_image">Title poster image</string>
    <string name="view_at_imdb">View at IMDb</string>
    <string name="rating">Rating:</string>
    <string name="plot">Plot:</string>
    <string name="about_and_privacy"><![CDATA[About & Privacy]]></string>
    <string name="about_header">About:</string>
    <string name="about_text">This Application ..... TODO</string>
    <string name="privacy_policy_header">Privacy Policy:</string>
    <string name="privacy_policy_text">all saved private user data is only used for marking which movie each user have already seen.\nAll your data will be safely saved and won\'t be shared.</string>
    <string name="cant_find_text">Missing Title ?\n\nCan\'t find a title ?\nLet us know and we will update it as soon as possible.\n\nPlease add a link to the title\'s IMDb page:</string>
    <string name="link_to_the_title_s_imdb_page">Link to the title\'s IMDb Page</string>
    <string name="send">Send</string>
</resources>
