<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/main_title"
        android:textSize="36sp" />

    <AutoCompleteTextView
        android:id="@+id/search_title_autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:completionThreshold="1"
        android:drawableEnd="@android:drawable/ic_search_category_default"
        android:hint="@string/search_bar_hint"
        android:imeOptions="flagNoExtractUi|actionSearch"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/already_seen_titles_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_seen_titles_checkbox_text" />

    <Button
        android:id="@+id/cant_find_title_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/cant_find_title_button_text" />

</LinearLayout>